[gd_scene load_steps=14 format=3 uid="uid://bgmw1fpqtt87o"]

[ext_resource type="Theme" uid="uid://ljcck66th0xd" path="res://scenes/ui/game_ui_theme.tres" id="1_7ck5g"]
[ext_resource type="Texture2D" uid="uid://cs847hh7av01t" path="res://assets/game/objects/Basic tools and meterials.png" id="2_17uwj"]
[ext_resource type="Script" uid="uid://da4ipb51gg0xg" path="res://scenes/ui/inventory_panel.gd" id="2_tdvod"]
[ext_resource type="Texture2D" uid="uid://pmcwv28j2203" path="res://assets/game/objects/Basic_tools_and_meterials.png" id="3_ta3uk"]
[ext_resource type="Texture2D" uid="uid://ces4og4p3j8lw" path="res://assets/game/objects/basic_plants.png" id="4_lcq1t"]
[ext_resource type="Texture2D" uid="uid://d0jd4i23s3i58" path="res://assets/game/objects/Egg item.png" id="5_b11k6"]
[ext_resource type="Texture2D" uid="uid://brdyp3bpmexh7" path="res://assets/game/objects/Simple Milk and grass item.png" id="5_lcq1t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cvy6a"]
atlas = ExtResource("2_17uwj")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b11k6"]
atlas = ExtResource("3_ta3uk")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdvod"]
atlas = ExtResource("4_lcq1t")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4tgr1"]
atlas = ExtResource("4_lcq1t")
region = Rect2(80, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7yjab"]
atlas = ExtResource("5_b11k6")

[sub_resource type="AtlasTexture" id="AtlasTexture_wmmu1"]
atlas = ExtResource("5_lcq1t")
region = Rect2(32, 0, 16, 16)

[node name="InventoryPanel" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_7ck5g")
theme_type_variation = &"DarkWoodPanel"
script = ExtResource("2_tdvod")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Logs" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryItemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Logs"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_cvy6a")

[node name="LogLabel" type="Label" parent="MarginContainer/VBoxContainer/Logs"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"

[node name="Stone" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryItemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Stone"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_b11k6")

[node name="StoneLabel" type="Label" parent="MarginContainer/VBoxContainer/Stone"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"

[node name="Corn" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryItemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Corn"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_tdvod")

[node name="CornLabel" type="Label" parent="MarginContainer/VBoxContainer/Corn"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"

[node name="Tomato" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryItemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Tomato"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_4tgr1")

[node name="TomatoLabel" type="Label" parent="MarginContainer/VBoxContainer/Tomato"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"

[node name="Egg" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryItemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Egg"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_7yjab")

[node name="EggLabel" type="Label" parent="MarginContainer/VBoxContainer/Egg"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"

[node name="Milk" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryItemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Milk"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_wmmu1")

[node name="MilkLabel" type="Label" parent="MarginContainer/VBoxContainer/Milk"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"
